hydro2/hydro2-network-wire-derive/tests/trybuild/fail_missing_attr.stderr
error: Missing `#[available_operators(...)]` on struct with `#[derive(NetworkWire)]`.
 --> tests/trybuild/fail_missing_attr.rs:9:12
  |
9 | pub struct MissingOperators<T> {
  |            ^^^^^^^^^^^^^^^^
